// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header Default Component should render normal header adequately for desktop 1`] = `
<div class="header container desktop">
  <ul class="user-links">
    <li><ish-login-status data-testing-id="user-status-desktop"></ish-login-status></li>
    <li class="d-none d-md-block">
      <ish-lazy-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-lazy-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a
      role="button"
      class="btn btn-link search-toggler sticky-header-icon"
      tabindex="-1"
      aria-label="search.searchbox.button.sticky_header.aria_label"
    ></a>
    <div class="language-switch-container">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-md-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center justify-content-between">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
          class="logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-search-box data-testing-id="search-box-desktop"></ish-search-box>
      </div>
    </div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="visually-hidden">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" aria-label="navigation.main.aria_label">
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render normal header adequately for mobile devices 1`] = `
<div class="header container mobile">
  <ul class="user-links">
    <li class="d-none d-md-block">
      <ish-lazy-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-lazy-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a
      role="button"
      class="btn btn-link search-toggler sticky-header-icon active-search"
      tabindex="-1"
      aria-label="search.searchbox.button.sticky_header.aria_label"
    ></a>
    <div class="search-container header-search-container show">
      <ish-search-box data-testing-id="search-box-desktop"></ish-search-box>
    </div>
    <div class="language-switch-container">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-login-status view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-md-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center justify-content-between">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
          class="mobile-logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-4"></div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="visually-hidden">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" aria-label="navigation.main.aria_label">
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render normal header adequately for tablet devices 1`] = `
<div class="header container tablet">
  <ul class="user-links">
    <li><ish-login-status data-testing-id="user-status-desktop"></ish-login-status></li>
    <li class="d-none d-md-block">
      <ish-lazy-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-lazy-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a
      role="button"
      class="btn btn-link search-toggler sticky-header-icon"
      tabindex="-1"
      aria-label="search.searchbox.button.sticky_header.aria_label"
    ></a>
    <div class="language-switch-container">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-md-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center justify-content-between">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
          class="logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-search-box data-testing-id="search-box-desktop"></ish-search-box>
      </div>
    </div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="visually-hidden">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" aria-label="navigation.main.aria_label">
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for desktop 1`] = `
<div class="header container desktop">
  <div class="header-utility">
    <a
      role="button"
      tabindex="0"
      class="btn btn-link search-toggler sticky-header-icon"
      aria-label="search.searchbox.button.sticky_header.aria_label"
      ><i class="bi bi-search header-icon"></i
    ></a>
    <div class="language-switch-container"></div>
    <ish-login-status view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-lg-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-lg-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center justify-content-between">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
          class="logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-search-box data-testing-id="search-box-desktop"></ish-search-box>
      </div>
    </div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="visually-hidden">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" aria-label="navigation.main.aria_label">
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for mobile devices 1`] = `
<div class="header container mobile">
  <div class="header-utility">
    <a
      role="button"
      class="btn btn-link search-toggler sticky-header-icon active-search"
      tabindex="0"
      aria-label="search.searchbox.button.sticky_header.aria_label"
      ><i class="bi bi-search header-icon"></i
    ></a>
    <div class="search-container header-search-container">
      <ish-search-box data-testing-id="search-box-desktop"></ish-search-box>
    </div>
    <div class="language-switch-container"></div>
    <ish-login-status view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-lg-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-lg-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center justify-content-between">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
          class="mobile-logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-4"></div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="visually-hidden">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" aria-label="navigation.main.aria_label">
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for tablet devices 1`] = `
<div class="header container tablet">
  <div class="header-utility">
    <a
      role="button"
      tabindex="0"
      class="btn btn-link search-toggler sticky-header-icon"
      aria-label="search.searchbox.button.sticky_header.aria_label"
      ><i class="bi bi-search header-icon"></i
    ></a>
    <div class="language-switch-container"></div>
    <ish-login-status view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-lg-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-lg-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center justify-content-between">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
          class="mobile-logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-search-box data-testing-id="search-box-desktop"></ish-search-box>
      </div>
    </div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="visually-hidden">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" aria-label="navigation.main.aria_label">
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;
